2008-01-16  Matthieu Nottale  <nottale@gostai.com>

	Fix dump.
	* src/object/object-class.cc: Do not initialize a std::string with 0.

2008-01-16  Samuel Tardieu  <tardieu@gostai.com>

	Notes on closures and at expansion.
	* doc/semantics-issues.org: New notes.

2008-01-16  Loic Fosse  <fosse@gostai.com>

	Test 1.x/string-escapes.chk does not fail anymore.
	* tests-local.mk: Remove 1.x/string-escapes.chk from XFAIL.

2008-01-16  Matthieu Nottale  <nottale@gostai.com>

	uobject_initialize.
	* src/uobject.cc: Implement it.
	* src/uobject.hh: Declare it.
	* src/userver.cc: Use it.

2008-01-16  Loic Fosse  <fosse@gostai.com>

	Reorder syntax errors.
	* src/ast/ast.yml: Add a Message node to carry errors and warnings.
	Nary can now contain Stmt and Message.
	* src/ast/cloner.hxx: Remove useless specialization.
	* src/parser/uparser.cc, src/parser/uparser.hh: Store all warnings
	and errors, not only the lastest.
	* src/runner/runner.cc, src/runner/runner.hh: Add management of
	Message node.
	* src/uconnection.cc: When errors or warnings are encountered, push
	them into the Nary instead of printing them directly.

2008-01-16  Matthieu Nottale  <nottale@gostai.com>

	Code cleanup.
	* src/uobject.cc,
	* src/uobject.hh,
	* src/uvalue-cast.cc,
	* src/uvalue-cast.hh: Restyle.

2008-01-15  Matthieu Nottale  <nottale@gostai.com>

	Code cleanup.
	* src/object/object.cc: Better comments and variable name.

2008-01-15  Matthieu Nottale  <nottale@gostai.com>

	Factor object_class_print and echo, remove dubious char* usage.
	* src/object/object-class.cc: Here.

2008-01-15  Benoit Sigoure  <tsuna@lrde.epita.fr>

	Remove a deprecated file.
	* src/uast.hh: Remove.
	* src/Makefile.am: Adjust.

2008-01-15  Samuel Tardieu  <tardieu@gostai.com>

	Add documentation following today's discussions.
	* doc/semantics-issues.org: Update documentation.

2008-01-15  Matthieu Nottale  <nottale@gostai.com>

	Factor code.
	* src/uobject.cc: Factor split_name.
