@@ -1,3 +1,10 @@
+2008-01-17  Samuel Tardieu  <tardieu@gostai.com>
+
+	Constants cleanup.
+	* share/urbi/urbi.u: Move "pi" and "inf" there. Put constants in
+	Lobby.
+	* src/parser/utoken.l: Remove special-cased constants.
+
 2008-01-16  Matthieu Nottale  <nottale@gostai.com>
 
 	Fix dump.
